package device;

import "common.proto";
import "units_of_measure.proto";

option java_package = "milo.protocols.protobuf";

message DeviceIdPacket {
    required UUID id = 1;
}

message DeviceDataPacket {
    message DeviceMeasurement {
        oneof measurement{
            Temperature temperature = 6;
            Humidity humidity = 7;
        }

        message Temperature {
            required double value = 1;
            required ThermalUnit unit = 2;
        }

        message Humidity {
            required double value = 1;
            required RelativeHumidityUnit unit = 2;
        }
    }
    required uint64 time = 2;
    required uint32 seq = 3;
    repeated DeviceMeasurement measurements = 4;
}
